<resources>
    <string name="app_name">RecipeOrganizer</string>
    <string name="nome">Name</string>
    <string name="ingredientes">Ingredients</string>
    <string name="modo_preparado">Method of preparation</string>
    <string name="tempo_de_preparo">Preparation time</string>
    <string name="numero_de_porcoes">Number of Servings</string>
    <string name="cadastro_de_receitas">Revenue Registration</string>
    <string name="selecionar_foto">Select Photo</string>
    <string name="caturar_foto">Capture Photo</string>
    <string name="receitada_cadastrada_com_sucesso">Recipe registered successfully!</string>
    <string name="por_favor_preencha_todos_os_campos">Please fill in all fields.</string>
    <string name="cafe_da_manha">Breakfast</string>
    <string name="almoco">Lunch</string>
    <string name="cafe_da_tarde">Afternoon coffee</string>
    <string name="janta">Dinner</string>
    <string name="limpar_todos_campos">Clear all fields</string>
    <string name="receita_ativada">Recipe Activated</string>
    <string name="receita_desativada">Disabled Revenue</string>
    <string name="categorias">Categories</string>

    <string name="sushi">Sushi</string>
    <string name="massas">Pastas</string>
    <string name="sobremesas">Desserts</string>
    <string name="pratos_vegetarianos">Vegetarian dishes</string>
    <string name="pratos_veganos">Vegan dishes</string>
    <string name="saladas">Salads</string>
    <string name="churrasco">Barbecue</string>
    <string name="comida_mexicana">Mexican food</string>
    <string name="comida_italiana">Italian food</string>
    <string name="comida_indiana">Indian food</string>
    <string name="comida_tailandesa">Thai food</string>
    <string name="comida_chinesa">Chinese food</string>
    <string name="comida_japonesa">Japanese food</string>
    <string name="comida_brasileira">Brazilian food</string>
    <string name="comida_francesa">French food</string>
    <string name="feijoada">Feijoada</string>
    <string name="buxada">Buxada</string>
    <string name="catador">Cowpea</string>
    <string name="baiao_de_dois">Baião de dois</string>
    <string name="salmao_grelhado">Grilled salmon</string>
    <string name="pizza">Pizza</string>
    <string name="macarronada">Pasta</string>
    <string name="farofa">Farofa</string>
    <string name="panqueca">Pancake</string>

    <string name="salvar">Save</string>
    <string name="limpar">Clean</string>

    <string name="masculino">Masculine</string>
    <string name="feminino">Feminine</string>
    <string name="genero">Gender</string>
    <string name="categoria_favorita">Favorite Category</string>
    <string name="data_inscricao">Enrollment Date</string>
    <string name="comida_favorita">Favorite Food</string>
    <string name="usuario_pressionado_detalhes">"User pressed details: "</string>
    <string name="receita_pressionada_detalhes">"Recipe Pressed Details: "</string>
    <string name="usuario_pressionado">"User pressed: "</string>
    <string name="receita_pressionada">"Recipe Pressed:: "</string>
    <string name="logo_utfpr" translatable="false">Logo UTFPR</string>
    <string name="nome_criador" translatable="false">Bruno Mendes Carvalho</string>
    <string name="nome_utfpr">UTFPR - Federal Technological University of Paraná</string>
    <string name="nome_especializacao">Technology in Java</string>
    <string name="descricao_projeto">System to manage your recipes!</string>
    <string name="voltar">BACK</string>
    <string name="email_criador_utfpr" translatable="false">brunomendescarvalho@alunos.utfpr.edu.br\n</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="tipo_refeicao">Type of Meal</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="nova_receita">New Revenue</string>
    <string name="alterar_receita">Change Recipe</string>
    <string name="tema_claro">Light Theme</string>
    <string name="tema_escuro">Dark Theme</string>
    <string name="campos_limpos_para_novo_cadastro_de_receita">Clean fields for new revenue registration!</string>
    <string name="deseja_realmente_excluir_a_seguinte_receita">Do you really want to delete the following recipe?</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>

</resources>