<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/nome"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/genero" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewComidaFavorita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comida_favorita" />

    <TextView
        android:id="@+id/textViewCategoriaFavorita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/categoria_favorita" />

</LinearLayout>